[gd_scene load_steps=3 format=3 uid="uid://c3xk1whxa6ux6"]

[ext_resource type="Theme" uid="uid://cwnrmxn0gcsms" path="res://scenes/default_theme.tres" id="1_k5eps"]
[ext_resource type="Script" path="res://scenes/Pause Menu/pause_menu.gd" id="2_pev4c"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_k5eps")
script = ExtResource("2_pev4c")

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(0.215686, 0.215686, 0.215686, 0.443137)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Resume Game"

[node name="SettingButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Settings"

[node name="MainMenuButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="GridContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="GridContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
